test/resources/nameAnalyzer/passing/NotDuplicateLocals2.amy
object Locals
  def foo(): Int(32) :=
    if (true) then
      val i: Int(32) = 42;
      i
    else
      42 match {
        case i => 42
      }
    end if
  end foo
end Locals
