test/resources/nameAnalyzer/failing/LocalScope.amy
object LocalScope
  def foo(): Int(32) :=
    val i: Int(32) = i;
    i
  end foo
end LocalScope
